--- a/src/pages/card-group.njk
+++ b/src/pages/card-group.njk
@@ -4,19 +4,17 @@
   {{nav.active('card-group')}}
 {% endblock %}
 
-{% block jca_content %}
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jca-page-header">
-        <div class="jca-page-header__title">
-          <ion-icon class="jca-page-header__icon" name="grid-outline"></ion-icon>
-          Card Group
-        </div>
-        <div class="jca-page-header__subtitle">Cards linked without spaces</div>
-      </div>
-    </div>
-  </div>
+{% block jca_page_header %}
+  {{
+    pageHeader.details(
+      'Card Group',
+      'Cards linked without spaces',
+      'grid'
+    )
+  }}
+{% endblock %}
 
+{% block jca_content %}
   <div class="row">
     <div class="col-md-12">
       <div class="jca-code-reference">
