--- a/src/pages/vertical-timeline.njk
+++ b/src/pages/vertical-timeline.njk
@@ -4,19 +4,17 @@
   {{nav.active('vertical-timeline')}}
 {% endblock %}
 
-{% block jca_content %}
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jca-page-header">
-        <div class="jca-page-header__title">
-          <ion-icon class="jca-page-header__icon" name="hourglass-outline"></ion-icon>
-          Timeline
-        </div>
-        <div class="jca-page-header__subtitle">Visual sequence of events</div>
-      </div>
-    </div>
-  </div>
+{% block jca_page_header %}
+  {{
+    pageHeader.details(
+      'Timeline',
+      'Visual sequence of events',
+      'hourglass'
+    )
+  }}
+{% endblock %}
 
+{% block jca_content %}
   <div class="row">
     <div class="col-md-12">
       <div class="jca-code-reference">
