--- a/src/templates/macros/sidebar.njk
+++ b/src/templates/macros/sidebar.njk
@@ -117,6 +117,15 @@
           Info Card
         </a>
       </li>
+
+      <li class="jca-nav-card__item {%if activePage == 'conversation' %} jca-nav-card__item--active {% endif %}">
+        <div class="jca-nav-card__item-icon">
+          <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+        </div>
+        <a href="../pages/conversation.html" class="jca-nav-card__item-link">
+          Conversation
+        </a>
+      </li>
     </ul>
   </div>
 {% endmacro %}
