--- a/src/pages/datatable.njk
+++ b/src/pages/datatable.njk
@@ -4,19 +4,17 @@
   {{nav.active('datatable')}}
 {% endblock %}
 
-{% block jca_content %}
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jca-page-header">
-        <div class="jca-page-header__title">
-          <ion-icon class="jca-page-header__icon" name="hardware-chip-outline"></ion-icon>
-          Datatable
-        </div>
-        <div class="jca-page-header__subtitle">Tables with a little aromat</div>
-      </div>
-    </div>
-  </div>
+{% block jca_page_header %}
+  {{
+    pageHeader.details(
+      'Datatable',
+      'Tables with a little aromat',
+      'hardware-chip'
+    )
+  }}
+{% endblock %}
 
+{% block jca_content %}
   <div class="row">
     <div class="col-md-12">
       <div class="jca-card">
