--- a/src/pages/feed.njk
+++ b/src/pages/feed.njk
@@ -4,19 +4,17 @@
   {{nav.active('feed')}}
 {% endblock %}
 
-{% block jca_content %}
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jca-page-header">
-        <div class="jca-page-header__title">
-          <ion-icon class="jca-page-header__icon" name="reader-outline"></ion-icon>
-          Feed
-        </div>
-        <div class="jca-page-header__subtitle">Cards for feeds and stories</div>
-      </div>
-    </div>
-  </div>
+{% block jca_page_header %}
+  {{
+    pageHeader.details(
+      'Feed',
+      'Cards for feeds and stories',
+      'reader'
+    )
+  }}
+{% endblock %}
 
+{% block jca_content %}
   <div class="row">
     <div class="col-md-12">
       <div class="jca-code-reference">
