--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -4,18 +4,17 @@
   {{nav.active('home')}}
 {% endblock %}
 
+{% block jca_page_header %}
+  {{
+    pageHeader.details(
+      'Home',
+      'Basecamp - The kitchen sink',
+      'home'
+    )
+  }}
+{% endblock %}
+
 {% block jca_content %}
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jca-page-header">
-        <div class="jca-page-header__title">
-          <ion-icon class="jca-page-header__icon" name="home-outline"></ion-icon>
-          Home
-        </div>
-        <div class="jca-page-header__subtitle">Basecamp - The kitchen sink</div>
-      </div>
-    </div>
-  </div>
   <div class="row">
     <div class="col-md-12">
       <div class="jca-card-group">
@@ -52,7 +51,7 @@
       <div class="jca-card-feed">
         <div class="jca-card-feed__author">
           <div class="jca-card-feed__author-name">
-            Anil Kuthrapali
+            Kamau Moussa
           </div>
 
           <div class="jca-card-feed__author-meta">
@@ -115,57 +114,6 @@
             <ion-icon class="jca-card-feed__actions-icon" name="hand-left-outline"></ion-icon>
             Report
           </a>
-        </div>
-      </div>
-
-      <div class="jca-card-feed">
-        <div class="jca-card-feed__author">
-          <div class="jca-card-feed__author-name">
-            Kamau Moussa
-          </div>
-
-          <div class="jca-card-feed__author-meta">
-            2 days ago
-          </div>
-        </div>
-        <div class="jca-card-feed__content">
-          Fat son how smiling mrs natural expense anxious friends. Boy scale enjoy ask abode fanny being son. As
-          material in learning subjects so improved feelings. Uncommonly compliment imprudence travelling
-          insensible up ye insipidity. To up painted delight winding as brandon. Gay regret eat looked warmth
-          easily far should now. Prospect at me wandered on extended wondered thoughts appetite to. Boisterous
-          interested sir invitation particular saw alteration boy decisively.
-        </div>
-        <div class="jca-card-feed__actions">
-          <a href="#" class="jca-card-feed__actions-item bg-success text-light">
-            <ion-icon class="jca-card-feed__actions-icon" name="heart-outline"></ion-icon>
-            Like
-          </a>
-
-          <a href="#" class="jca-card-feed__actions-item bg-primary text-light">
-            <ion-icon class="jca-card-feed__actions-icon" name="bookmark-outline"></ion-icon>
-            Follow
-          </a>
-
-          <a href="#" class="jca-card-feed__actions-item bg-warning text-light">
-            <ion-icon class="jca-card-feed__actions-icon" name="hand-left-outline"></ion-icon>
-            Report
-          </a>
-        </div>
-      </div>
-
-      <div class="jca-card-feed">
-        <div class="jca-card-feed__author">
-          <div class="jca-card-feed__author-name">
-            Chidimma Danai
-          </div>
-
-          <div class="jca-card-feed__author-meta">
-            2 days ago
-          </div>
-        </div>
-        <div class="jca-card-feed__media">
-          <img src="https://res.cloudinary.com/duvwrnkqj/image/upload/v1591820470/pexels-photo-1547248_dlwqp4.jpg"
-            alt="Fitness">
         </div>
       </div>
     </div>
