--- a/src/pages/pricing.njk
+++ b/src/pages/pricing.njk
@@ -4,19 +4,17 @@
   {{nav.active('pricing')}}
 {% endblock %}
 
-{% block jca_content %}
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jca-page-header">
-        <div class="jca-page-header__title">
-          <ion-icon class="jca-page-header__icon" name="card-outline"></ion-icon>
-          Pricing
-        </div>
-        <div class="jca-page-header__subtitle">Pricing cards</div>
-      </div>
-    </div>
-  </div>
+{% block jca_page_header %}
+  {{
+    pageHeader.details(
+      'Pricing',
+      'Pricing cards',
+      'card'
+    )
+  }}
+{% endblock %}
 
+{% block jca_content %}
   <div class="row">
     <div class="col-md-12">
       <div class="jca-code-reference">
