--- a/src/styles/components/_jca-page-header.scss
+++ b/src/styles/components/_jca-page-header.scss
@@ -9,6 +9,8 @@
     letter-spacing: -1px;
     color: $black;
     position: relative;
+    display: flex;
+    align-items: center;
   }
 
   &__icon {
