--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -30,6 +30,7 @@
 @import './components/jca-pagination';
 @import './components/jca-datatable';
 @import './components/jca-info-card';
+@import './components/jca-conversation';
 
 // UTILITIES
 @import './utilities/jca-keyword';
@@ -41,6 +42,7 @@
 
 body * {
   font-family: $base_font;
+  box-sizing: border-box;
 }
 
 body {
