--- a/src/styles/components/_jca-card-tags.scss
+++ b/src/styles/components/_jca-card-tags.scss
@@ -35,7 +35,7 @@
   }
 
   &__item {
-    padding: 15px;
+    padding: $default_padding;
     box-sizing: border-box;
     border-right: $default_border;
     border-top: $default_border;
