--- a/src/templates/partials/footer.njk
+++ b/src/templates/partials/footer.njk
@@ -16,29 +16,21 @@
             Social
           </li>
           <li class="jca-list__item">
-            <a href="#">Link 1</a>
+            <a href="https://www.instagram.com/thabo.titus/" target="_blank">Instagram</a>
           </li>
+
           <li class="jca-list__item">
-            <a href="#">Link 2</a>
-          </li>
-          <li class="jca-list__item">
-            <a href="#">Link 3</a>
+            <a href="https://www.linkedin.com/in/thabotitus/" target="_blank">LinkedIn</a>
           </li>
         </ul>
       </div>
       <div class="col-md-4">
         <ul class="jca-list">
           <li class="jca-list__header">
-            Contact
+            Open Source 
           </li>
           <li class="jca-list__item">
-            <a href="#">Link 1</a>
-          </li>
-          <li class="jca-list__item">
-            <a href="#">Link 2</a>
-          </li>
-          <li class="jca-list__item">
-            <a href="#">Link 3</a>
+            <a href="https://thabotitus.gitlab.io/mimi-ui/" target="_blank">Mimi UI</a>
           </li>
         </ul>
       </div>
