--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -116,6 +116,35 @@
           </a>
         </div>
       </div>
+
+      <div class="jca-info-card">
+        <div class="jca-info-card__main">
+          <div class="jca-info-card__icon">
+            <ion-icon name="airplane-outline"></ion-icon>
+          </div>
+          <div class="jca-info-card__content">
+            <div class="jca-info-card__title">
+              <a href="#">Flight JE323</a>
+            </div>
+            <div class="jca-info-card__description">
+              Flight has been delay by 2hrs
+            </div>
+          </div>
+        </div>
+        <div class="jca-info-card__footer">
+          <div class="jca-info-card__footer-item">
+            12 Mar, 2020
+          </div>
+          
+          <div class="jca-info-card__footer-item">
+            10:00 - 12:00
+          </div>
+
+          <div class="jca-info-card__footer-item">
+            ZAR 1,500
+          </div>
+        </div>
+      </div>
     </div>
 
     <!------------------------------------------------
@@ -123,6 +152,21 @@
     ------------------------------------------------->
 
     <div class="col-md-4">
+      <div class="jca-card-otp">
+        <div class="jca-card-otp__icon">
+          <ion-icon name="finger-print-outline"></ion-icon>
+        </div>
+        <div class="jca-card-otp__text">
+          Please enter the one time pin sent to *******789
+        </div>
+        <div class="jca-card-otp__input">
+          <input type="text" value="94856" />
+        </div>
+        <div class="jca-card-otp__action">
+          <div class="btn btn-success">Submit</div>
+        </div>
+      </div>
+
       <div class="jca-card-pricing">
         <div class="jca-card-pricing__header">
           <div class="jca-card-pricing__header-main">Special Offer</div>
@@ -168,7 +212,7 @@
             Contact Us
           </a>
         </div>
-      </div>
+      </div>      
     </div>
 
     <!------------------------------------------------
@@ -273,6 +317,16 @@
           </div>
         </div>
       </div>
+
+      <ul class="jca-pagination">
+        <li class="jca-pagination__item"><ion-icon name="arrow-back-outline"></ion-icon></li>
+        <li class="jca-pagination__item jca-pagination--current">1</li>
+        <li class="jca-pagination__item">2</li>
+        <li class="jca-pagination__item">3</li>
+        <li class="jca-pagination__item">4</li>
+        <li class="jca-pagination__item jca-pagination--disabled">5</li>
+        <li class="jca-pagination__item"><ion-icon name="arrow-forward-outline"></ion-icon></li>
+      </ul>
     </div>
   </div>
 {% endblock %}
