--- a/src/styles/components/_jca-card-group.scss
+++ b/src/styles/components/_jca-card-group.scss
@@ -10,7 +10,7 @@
   &__item {
     flex: 1;
     height: 100px;
-    padding: 0 20px;
+    padding: 0 $default_padding;
     border-left: 1px solid $grey;
     display: flex;
     flex-direction: column;
