--- a/src/styles/components/_jca-card-pricing.scss
+++ b/src/styles/components/_jca-card-pricing.scss
@@ -3,6 +3,7 @@
   background: $white;
   overflow: hidden;
   box-shadow: $default_shadow;
+  margin-bottom: 20px;
 
   &--featured {
     box-shadow: $default_shadow;
