--- a/src/templates/macros/pageHeader.njk
+++ b/src/templates/macros/pageHeader.njk
@@ -1,9 +1,13 @@
 {% macro details(title = 'title', subtitle = '', icon = '') %}
-  <div class="jca-page-header m-0">
-    <div class="jca-page-header__title">
-      <ion-icon class="jca-page-header__icon" name="{{ icon }}"></ion-icon>
-      {{ title }}
+  <div class="py-30" style="background-color: #F1F1F1;">
+    <div class="container-fluid">
+      <div class="jca-page-header m-0">
+        <div class="jca-page-header__title">
+          <ion-icon class="jca-page-header__icon" name="{{ icon }}"></ion-icon>
+          {{ title }}
+        </div>
+        <div class="jca-page-header__subtitle">{{ subtitle }}</div>
+      </div>
     </div>
-    <div class="jca-page-header__subtitle">{{ subtitle }}</div>
   </div>
 {% endmacro %}
