clean up build process

--- a/src/styles/base/layout/_base.scss
+++ b/src/styles/base/layout/_base.scss
@@ -72,6 +72,10 @@
     font-size: 2.5em;
   }
 
+  &__description {
+    font-size: 1.4em;
+  }
+
   &__cta {
     display: flex;
     align-items: center;
