--- a/src/styles/components/_jca-page-header.scss
+++ b/src/styles/components/_jca-page-header.scss
@@ -1,25 +1,48 @@
 .jca-page-header {
-  margin-bottom: 40px;
   position: relative;
+  display: flex;
+  height: 100%;
+  height: 100px;
+  align-items: center;
 
   &__title {
-    font-weight: 700;
+    font-weight: 800;
     text-transform: uppercase;
-    font-size: 1.5em;
-    letter-spacing: -1px;
+    font-size: 1.3em;
+    // letter-spacing: -1px;
     color: $black;
     position: relative;
-    display: flex;
+    display: inline-flex;
     align-items: center;
+    margin-right: 5px;
   }
 
   &__icon {
     display: inline-block;
     margin-right: 10px;
-    font-size: 20px;
+    font-size: 18px;
   }
 
   &__subtitle {
     text-transform: uppercase;
+    display: inline-flex;
   }
+
+  &__text {
+    flex: 1;
+    display: flex;
+    align-items: center;
+  }
+
+  &__meta {
+    flex: 1;
+    max-width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.jca-page-header-wrapper {
+  background-color: darken($grey, 2%);
 }
