--- a/src/index.njk
+++ b/src/index.njk
@@ -12,56 +12,94 @@
                 JCA UI KIT <span data-version>v0.1.0</span>
               </div>
               <div class="jca-landing-intro__text">
-                <h1>SIMPLE, CLEAN UI KIT FOR A VARIETY OF USE CASES</h1>
+                <h1>SIMPLE, CLEAN BOOTSTRAP v4 UI KIT</h1>
               </div>
+              <p class="jca-landing-intro__description mb-40">
+                Use bootstrap utility classes to seemlessly create an unlimited variety of
+                interfaces! It's free forever! 😎
+              </p>
               <div class="jca-landing-intro__cta">
-                <a href="./pages/home.html">Take a look</a>
-                <ion-icon name="arrow-forward-circle-outline" size="large"></ion-icon>
+                <a class="btn btn-primary" href="./pages/home.html">Check it out</a>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="jca-card-notification text-primary">
-              <div class="jca-card-notification__icon">
-                <ion-icon name="today-outline"></ion-icon>
+            <div class="jca-info-card">
+              <div class="jca-info-card__main">
+                <div class="jca-info-card__icon">
+                  <ion-icon name="airplane-outline"></ion-icon>
+                </div>
+                <div class="jca-info-card__content">
+                  <div class="jca-info-card__title">
+                    <a href="#">Flight JE323</a>
+                  </div>
+                  <div class="jca-info-card__description">
+                    Flight has been delay by 2hrs
+                  </div>
+                </div>
               </div>
-              <div class="jca-card-notification__content">
-                <div class="jca-card-notification__message">
-                  You have a new consultation request from Tocarra with coloured text
+              <div class="jca-info-card__footer">
+                <div class="jca-info-card__footer-item">
+                  12 Mar, 2020
+                </div>
+                
+                <div class="jca-info-card__footer-item">
+                  10:00 - 12:00
+                </div>
+
+                <div class="jca-info-card__footer-item">
+                  ZAR 1,500
                 </div>
               </div>
             </div>
 
-            <div class="jca-card-feed">
-              <div class="jca-card-feed__author">
-                <div class="jca-card-feed__author-name">
-                  Desmond Dube
-                </div>
-
-                <div class="jca-card-feed__author-meta">
-                  2 days ago
+            <div class="jca-card-timeline">
+              <div class="jca-card-timeline__item">
+                <div class="jca-card-timeline__meta">
+                  <div class="jca-card-timeline__icon">
+                    <ion-icon name="radio-button-on-outline"></ion-icon>
+                  </div>
+                  <div class="jca-card-timeline__details">
+                    <div class="jca-card-timeline__title">
+                      Coffee Date
+                    </div>
+                    <div class="jca-card-timeline__date">
+                      10 Jan, 2020 - 10:00 AM
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="jca-card-feed__content">
-                No depending be convinced in unfeeling he. Excellence she unaffected and too sentiments her. Rooms he
-                doors there ye aware in by shall. Education remainder in so cordially. His remainder and own dejection
-                daughters sportsmen. Is easy took he shed to kind.
+
+              <div class="jca-card-timeline__item">
+                <div class="jca-card-timeline__meta">
+                  <div class="jca-card-timeline__icon">
+                    <ion-icon name="checkmark-done-outline"></ion-icon>
+                  </div>
+                  <div class="jca-card-timeline__details">
+                    <div class="jca-card-timeline__title">
+                      Feed the dog
+                    </div>
+                    <div class="jca-card-timeline__date">
+                      10 Jan, 2020 - 11:00 AM
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="jca-card-feed__actions">
-                <a href="#" class="jca-card-feed__actions-item bg-success text-light">
-                  <ion-icon class="jca-card-feed__actions-icon" name="heart-outline"></ion-icon>
-                  Like
-                </a>
 
-                <a href="#" class="jca-card-feed__actions-item bg-primary text-light">
-                  <ion-icon class="jca-card-feed__actions-icon" name="bookmark-outline"></ion-icon>
-                  Follow
-                </a>
-
-                <a href="#" class="jca-card-feed__actions-item bg-warning text-light">
-                  <ion-icon class="jca-card-feed__actions-icon" name="hand-left-outline"></ion-icon>
-                  Report
-                </a>
+              <div class="jca-card-timeline__item bg-danger text-light">
+                <div class="jca-card-timeline__meta">
+                  <div class="jca-card-timeline__icon">
+                    <ion-icon name="close-outline"></ion-icon>
+                  </div>
+                  <div class="jca-card-timeline__details">
+                    <div class="jca-card-timeline__title">
+                      Tutorial
+                    </div>
+                    <div class="jca-card-timeline__date">
+                      10 Jan, 2020 - 12:00 PM
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
