--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -17,27 +17,29 @@
 {% block jca_content %}
   <div class="row">
     <div class="col-md-12">
-      <div class="jca-card-group">
-        <div class="jca-card-group__item">
-          <div class="jca-card-group__title">Temperature</div>
-          <div class="jca-card-group__content">10 &deg; C</div>
+      <div class="jca-card-group" id="weather">
+        <div class="jca-card-group__item bg-grey text-center">
+          <div class="jca-card-group__title">TODAY</div>
+          <div class="jca-card-group__content">
+            ${ weatherArea }
+          </div>
         </div>
         <div class="jca-card-group__item">
           <div class="jca-card-group__title">High</div>
           <div class="jca-card-group__content">
-            16 &deg; C
+            ${ weatherHigh } &deg; C
           </div>
         </div>
         <div class="jca-card-group__item">
-          <div class="jca-card-group__title">Loc</div>
+          <div class="jca-card-group__title">Low</div>
           <div class="jca-card-group__content">
-            4 &deg; C
+            ${ weatherLow } &deg; C
           </div>
         </div>
         <div class="jca-card-group__item">
           <div class="jca-card-group__title">Weather</div>
           <div class="jca-card-group__content">
-            Overcast, Heavy Showers
+            ${ weatherDescription }
           </div>
         </div>
       </div>
@@ -48,6 +50,35 @@
       LEFT COLUMN
     ------------------------------------------------->
     <div class="col-md-4">
+      <div class="jca-info-card">
+        <div class="jca-info-card__main">
+          <div class="jca-info-card__icon">
+            <ion-icon name="airplane-outline"></ion-icon>
+          </div>
+          <div class="jca-info-card__content">
+            <div class="jca-info-card__title">
+              <a href="#">Flight JE323</a>
+            </div>
+            <div class="jca-info-card__description">
+              Flight has been delay by 2hrs
+            </div>
+          </div>
+        </div>
+        <div class="jca-info-card__footer">
+          <div class="jca-info-card__footer-item">
+            12 Mar, 2020
+          </div>
+          
+          <div class="jca-info-card__footer-item">
+            10:00 - 12:00
+          </div>
+
+          <div class="jca-info-card__footer-item">
+            ZAR 1,500
+          </div>
+        </div>
+      </div>
+
       <div class="jca-card-feed">
         <div class="jca-card-feed__author">
           <div class="jca-card-feed__author-name">
@@ -114,35 +145,6 @@
             <ion-icon class="jca-card-feed__actions-icon" name="hand-left-outline"></ion-icon>
             Report
           </a>
-        </div>
-      </div>
-
-      <div class="jca-info-card">
-        <div class="jca-info-card__main">
-          <div class="jca-info-card__icon">
-            <ion-icon name="airplane-outline"></ion-icon>
-          </div>
-          <div class="jca-info-card__content">
-            <div class="jca-info-card__title">
-              <a href="#">Flight JE323</a>
-            </div>
-            <div class="jca-info-card__description">
-              Flight has been delay by 2hrs
-            </div>
-          </div>
-        </div>
-        <div class="jca-info-card__footer">
-          <div class="jca-info-card__footer-item">
-            12 Mar, 2020
-          </div>
-          
-          <div class="jca-info-card__footer-item">
-            10:00 - 12:00
-          </div>
-
-          <div class="jca-info-card__footer-item">
-            ZAR 1,500
-          </div>
         </div>
       </div>
     </div>
@@ -247,10 +249,10 @@
           </div>
         </div>
 
-        <div class="jca-card-timeline__item bg-success text-light">
+        <div class="jca-card-timeline__item bg-danger text-light">
           <div class="jca-card-timeline__meta">
             <div class="jca-card-timeline__icon">
-              <ion-icon name="radio-button-on-outline"></ion-icon>
+              <ion-icon name="close-outline"></ion-icon>
             </div>
             <div class="jca-card-timeline__details">
               <div class="jca-card-timeline__title">
