--- a/src/templates/layout.njk
+++ b/src/templates/layout.njk
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>JCA UI KIT | Landing</title>
     <link href="./css/jca-ui-kit.min.css" rel="stylesheet">
-    <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
+    
   </head>
   <body>
     <div class="jca-loader" data-body="loader">
@@ -17,7 +16,10 @@
     <div class="jca-layout d-none" data-body="content">
       {% block content %} {% endblock %}
     </div>
-    <script type="text/javascript" src="./js/jca_dependencies.min.js"></script>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
     <script type="text/javascript" src="./js/jca-ui-kit.min.js"></script>
+    <script type="text/javascript" src="./js/custom.min.js"></script>
   </body>
 </html>
