--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,8 +6,7 @@
 // VENDOR
 @import '../../node_modules/normalize.css/normalize.css';
 @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
-@import '../../node_modules/gemini-scrollbar/gemini-scrollbar.css';
-@import '../../node_modules/animate.css/animate.min.css';
+@import '../../node_modules//animate.css/animate.compat.css';
 @import './vendor/bootstrap-theme.css';
 @import './vendor/prism.css';
 
