favicon, build zip package

--- a/src/pages/getting-started.njk
+++ b/src/pages/getting-started.njk
@@ -32,7 +32,7 @@
   &lt;head&gt;
     &lt;meta charset="UTF-8"&gt;
     &lt;title&gt;Your Site Name&lt;/title&gt;
-    &lt;link href="../css/jca-ui-kit.min.css" rel="stylesheet"&gt;
+    &lt;link href="./css/jca-ui-kit.min.css" rel="stylesheet"&gt;
   &lt;/head&gt;
   &lt;body&gt;
     ...
