--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -29,6 +29,7 @@
 @import './components/jca-datatable';
 @import './components/jca-info-card';
 @import './components/jca-conversation';
+@import './components/jca-accordion';
 
 // UTILITIES
 @import './utilities/jca-keyword';
