--- a/src/templates/macros/sidebar.njk
+++ b/src/templates/macros/sidebar.njk
@@ -126,6 +126,15 @@
           Conversation
         </a>
       </li>
+
+      <li class="jca-nav-card__item {%if activePage == 'accordion' %} jca-nav-card__item--active {% endif %}">
+        <div class="jca-nav-card__item-icon">
+          <ion-icon name="menu-outline"></ion-icon>
+        </div>
+        <a href="../pages/accordion.html" class="jca-nav-card__item-link">
+          Accordion
+        </a>
+      </li>
     </ul>
   </div>
 {% endmacro %}
