update image paths

--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@
           <div class="col-md-6">
             <div class="jca-landing-intro">
               <div class="jca-landing-intro__logo">
-                <img src="./img/logo.svg" />
+                <img src="./images/logo.svg" />
                 JCA UI KIT <span data-version>v0.1.0</span>
               </div>
               <div class="jca-landing-intro__text">
