--- a/src/templates/partials/footer.njk
+++ b/src/templates/partials/footer.njk
@@ -4,7 +4,7 @@
       <div class="col-md-4 d-flex align-items-center">
         <div class="jca-logo jca-logo--light">
           <a href="../index.html">
-            <img src="../img/logo-light.svg"/>
+            <img src="../images/logo-light.svg"/>
             JCA UI KIT
             <span class="jca-logo__version" data-version></span>
           </a>
@@ -52,7 +52,7 @@
 
     <div class="row mt-5 d-flex justify-content-center">
       <a href="https://www.thabotitus.co.za" target="_blank">
-        <img src="../img/TTS-Logo-light.png" width="250px"/>
+        <img src="../images/TTS-Logo-light.png" width="250px"/>
       </a>
     </div>
   </div>
