--- a/src/templates/dashboard.njk
+++ b/src/templates/dashboard.njk
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <title>JCA UI KIT</title>
   <link href="../css/jca-ui-kit.min.css" rel="stylesheet">
-  <link rel='icon' href='../img/favicon.ico' type='image/x-icon'/ >
+  <link rel='icon' href='../images/favicon.ico' type='image/x-icon'/ >
 </head>
 
 <body>
   <div class="jca-loader" data-body="loader">
-    <img src="../img/loader.svg" />
+    <img src="../images/loader.svg" />
     <p>... LOADING ...</p>
   </div>
 
@@ -19,7 +19,7 @@
       <div class="container-fluid d-flex">
         <div class="jca-logo">
           <a href="../index.html">
-            <img src="../img/logo.svg" />
+            <img src="../images/logo.svg" />
             JCA UI KIT
             <span class="jca-logo__version" data-version></span>
           </a>
