--- a/src/templates/macros/sidebar.njk
+++ b/src/templates/macros/sidebar.njk
@@ -135,6 +135,15 @@
           Accordion
         </a>
       </li>
+
+      <li class="jca-nav-card__item {%if activePage == 'table' %} jca-nav-card__item--active {% endif %}">
+        <div class="jca-nav-card__item-icon">
+          <ion-icon name="stop-outline"></ion-icon>
+        </div>
+        <a href="../pages/table.html" class="jca-nav-card__item-link">
+          Table
+        </a>
+      </li>
     </ul>
   </div>
 {% endmacro %}
