--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -30,6 +30,7 @@
 @import './components/jca-info-card';
 @import './components/jca-conversation';
 @import './components/jca-accordion';
+@import './components/jca-table';
 
 // UTILITIES
 @import './utilities/jca-keyword';
