--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,11 +2,13 @@
 @import './base/fonts';
 @import './base/variables';
 @import './base/layout';
+@import './base/mixins';
 
 // VENDOR
 @import '../../node_modules/normalize.css/normalize.css';
 @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import './vendor/bootstrap-theme.css';
+@import './vendor/justconnect.bootstrap.theme';
 @import './vendor/prism.css';
 
 // CARDS
@@ -31,10 +33,12 @@
 @import './components/jca-conversation';
 @import './components/jca-accordion';
 @import './components/jca-table';
+@import './components/jca-data-card';
 
 // UTILITIES
 @import './utilities/jca-keyword';
 @import './utilities/jca-helpers';
+@import './utilities/jca-label';
 
 // OVERRIDES
 @import './overrides/btn';
