--- a/src/templates/macros/sidebar.njk
+++ b/src/templates/macros/sidebar.njk
@@ -144,6 +144,15 @@
           Table
         </a>
       </li>
+
+      <li class="jca-nav-card__item {%if activePage == 'data-card' %} jca-nav-card__item--active {% endif %}">
+        <div class="jca-nav-card__item-icon">
+          <ion-icon name="barcode-outline"></ion-icon>
+        </div>
+        <a href="../pages/data-card.html" class="jca-nav-card__item-link">
+          Data Card
+        </a>
+      </li>
     </ul>
   </div>
 {% endmacro %}
