--- a/src/styles/components/_jca-card-pricing.scss
+++ b/src/styles/components/_jca-card-pricing.scss
@@ -83,7 +83,7 @@
         padding: 15px 10px;
         display: flex;
         align-items: center;
-        border-bottom: 1px solid darken($white, 5%);
+        border-bottom: 1px dashed rgba(0, 0, 0, 0.15);
 
         &:last-child {
           border: none;
