add some borders

--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -95,17 +95,17 @@
           marianne.
         </div>
         <div class="jca-card-feed__actions">
-          <a href="#" class="jca-card-feed__actions-item bg-success text-light">
+          <a href="#" class="jca-card-feed__actions-item">
             <ion-icon class="jca-card-feed__actions-icon" name="heart-outline"></ion-icon>
             Like
           </a>
 
-          <a href="#" class="jca-card-feed__actions-item bg-primary text-light">
+          <a href="#" class="jca-card-feed__actions-item">
             <ion-icon class="jca-card-feed__actions-icon" name="bookmark-outline"></ion-icon>
             Follow
           </a>
 
-          <a href="#" class="jca-card-feed__actions-item bg-warning text-light">
+          <a href="#" class="jca-card-feed__actions-item">
             <ion-icon class="jca-card-feed__actions-icon" name="hand-left-outline"></ion-icon>
             Report
           </a>
@@ -131,17 +131,17 @@
           <img src="https://res.cloudinary.com/duvwrnkqj/image/upload/v1591820721/pexels-photo-4173172_pouw6d.jpg" alt="">
         </div>
         <div class="jca-card-feed__actions">
-          <a href="#" class="jca-card-feed__actions-item bg-success text-light">
+          <a href="#" class="jca-card-feed__actions-item">
             <ion-icon class="jca-card-feed__actions-icon" name="heart-outline"></ion-icon>
             Like
           </a>
 
-          <a href="#" class="jca-card-feed__actions-item bg-primary text-light">
+          <a href="#" class="jca-card-feed__actions-item">
             <ion-icon class="jca-card-feed__actions-icon" name="bookmark-outline"></ion-icon>
             Follow
           </a>
 
-          <a href="#" class="jca-card-feed__actions-item bg-warning text-light">
+          <a href="#" class="jca-card-feed__actions-item">
             <ion-icon class="jca-card-feed__actions-icon" name="hand-left-outline"></ion-icon>
             Report
           </a>
@@ -206,11 +206,11 @@
 
 
         <div class="jca-card-pricing__actions">
-          <a href="#" class="jca-card-pricing__actions-item bg-success text-light">
+          <a href="#" class="jca-card-pricing__actions-item">
             Sign up
           </a>
 
-          <a href="#" class="jca-card-pricing__actions-item bg-info">
+          <a href="#" class="jca-card-pricing__actions-item">
             Contact Us
           </a>
         </div>
