--- a/src/styles/components/_jca-card-feed.scss
+++ b/src/styles/components/_jca-card-feed.scss
@@ -49,10 +49,16 @@
       max-width: 50%;
       justify-content: center;
       cursor: pointer;
+      border-left: 0.5px solid rgba(0, 0, 0, 0.15);
+      border-top: 0.5px solid rgba(0, 0, 0, 0.15);
 
       &:hover {
         font-weight: 700 !important;
         text-decoration: none;
+      }
+
+      &:first-child {
+        border-left: none;
       }
     }
 
