--- a/src/styles/components/_jca-card-tags.scss
+++ b/src/styles/components/_jca-card-tags.scss
@@ -8,6 +8,7 @@
     padding: 30px;
     font-weight: 700;
     text-transform: uppercase;
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.15);
 
     &-text {
       flex: 3;
