--- a/src/templates/partials/footer.njk
+++ b/src/templates/partials/footer.njk
@@ -1,4 +1,4 @@
-<div class="jca-footer jca-footer--gradient-1">
+<div class="jca-footer bg-primary">
   <div class="container">
     <div class="row">
       <div class="col-md-4 d-flex align-items-center">
