add showcase page

--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -115,7 +115,7 @@
       <div class="jca-card-feed">
         <div class="jca-card-feed__author">
           <div class="jca-card-feed__author-name">
-            Anil Kuthrapali
+            Denzel Washington
           </div>
 
           <div class="jca-card-feed__author-meta">
