--- a/src/templates/dashboard.njk
+++ b/src/templates/dashboard.njk
@@ -58,16 +58,9 @@
           </li>
 
           <li class="jca-topbar__nav-item dropdown d-non">
-            <div class="jca-topbar__nav-content dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">
+            <div class="jca-topbar__nav-content">
               <ion-icon class="jca-topbar__nav-icon" name="bonfire-outline"></ion-icon>
-              <a href="#">Showcase</a>
-            </div>
-            <div class="dropdown-menu animated fadeInUp" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="https://www.justconnect.africa/" target="_blank">
-                <ion-icon class="dropdown-item__icon" name="globe-outline"></ion-icon>
-                Just Connect
-              </a>
+              <a href="./showcase.html">Showcase</a>
             </div>
           </li>
         </ul>
