--- a/src/templates/macros/pageHeader.njk
+++ b/src/templates/macros/pageHeader.njk
@@ -11,7 +11,7 @@
         </div>
 
         <div class="jca-page-header__meta">
-          <div class="btn btn-success" data-date> - </div>
+          <div class="font-weight-bold" data-date> - </div>
         </div>
       </div>
     </div>
