--- a/src/templates/macros/sidebar.njk
+++ b/src/templates/macros/sidebar.njk
@@ -153,6 +153,15 @@
           Data Card
         </a>
       </li>
+
+      <li class="jca-nav-card__item {%if activePage == 'ordered-list' %} jca-nav-card__item--active {% endif %}">
+        <div class="jca-nav-card__item-icon">
+          <ion-icon name="list-outline"></ion-icon>
+        </div>
+        <a href="../pages/ordered-list.html" class="jca-nav-card__item-link">
+          Ordered List
+        </a>
+      </li>
     </ul>
   </div>
 {% endmacro %}
