--- a/src/styles/components/_jca-table.scss
+++ b/src/styles/components/_jca-table.scss
@@ -7,6 +7,7 @@
   overflow: hidden;
   box-shadow: $default_shadow;
   margin-bottom: 20px;
+  table-layout: fixed;
 
   &__row {
     display: table-row;
