--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -44,6 +44,7 @@
 // OVERRIDES
 @import './overrides/btn';
 @import './overrides/container';
+@import './overrides/dropdown';
 
 body * {
   font-family: $base_font;
