--- a/src/styles/components/_jca-card-feed.scss
+++ b/src/styles/components/_jca-card-feed.scss
@@ -49,8 +49,8 @@
       max-width: 50%;
       justify-content: center;
       cursor: pointer;
-      border-left: 0.5px solid rgba(0, 0, 0, 0.15);
-      border-top: 0.5px solid rgba(0, 0, 0, 0.15);
+      border-left: $default_border;
+      border-top: $default_border;
 
       &:hover {
         font-weight: 700 !important;
