--- a/src/styles/components/_jca-card-group.scss
+++ b/src/styles/components/_jca-card-group.scss
@@ -7,7 +7,7 @@
     flex: 1;
     height: 100px;
     padding: 0 $default_padding;
-    border-left: 1px dashed rgba(0, 0, 0, 0.15);
+    border-left: $default_border;
     display: flex;
     flex-direction: column;
     justify-content: center;
